# pulumi-nomad

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  CHANGELOG_OLD.md  Makefile  README.md  mise.toml
.claude/: CLAUDE.md
.config/: mise.toml
.github/: copilot-instructions.md
.github/workflows/: build_provider.yml  build_sdk.yml  license.yml  (+19 more)
docs/: _index.md
examples/: examples_dotnet_test.go  examples_go_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod  go.sum
provider/: go.mod  go.sum  resources.go
scripts/: plugins.mk
sdk/: go.mod  go.sum
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_nomad/: README.md  __init__.py  _inputs.py  acl_auth_method.py  acl_binding_rule.py  acl_policy.py  acl_role.py  acl_token.py  csi_volume.py  csi_volume_registration.py  dynamic_host_volume.py  dynamic_host_volume_registration.py  external_volume.py  get_acl_policies.py  get_acl_policy.py  get_acl_role.py  get_acl_roles.py  get_acl_token.py  get_acl_tokens.py  get_allocations.py  get_datacenters.py  get_deployments.py  get_dynamic_host_volume.py  get_job.py  get_job_parser.py  get_jwks.py  get_namespace.py  get_namespaces.py  get_node.py  get_node_pool.py  get_node_pools.py  get_nodes.py  get_plugin.py  get_plugins.py  get_regions.py  get_scaling_policies.py  get_scaling_policy.py  get_scheduler_policy.py  get_variable.py  get_volumes.py  (+10 more)
sdk/python/pulumi_nomad/config/: __init__.pyi  outputs.py  vars.py
testing/: setup.sh
(+723 files in other folders)
